Use ONBUILD to allow inherited image to install custom plugins
Signed-off-by: Sam Xiao <sam.xs.xiao@gmail.com>